--- a/#source/header.html
+++ b/#source/header.html
@@ -1,3 +1,31 @@
-<div class="header">
-    HEADER
-</div>
+<header class="container header">
+    <a href="#">
+        <img src="../img/header_logo.svg" alt="logo image">
+    </a>
+    <nav class="navbar">
+        <ul class="navbar__list">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
+        <div class="contacts">
+            <div class="contacts__item">
+                <img src="../img/iPhone.svg" alt="iphone image">
+                <div>
+                    <p class="contacts__item-text">Call us</p>
+                    <a href="tel:4055550128">(405) 555-0128</a>
+                </div>
+            </div>
+            <div class="contacts__item">
+                <img src="../img/Chat.svg" alt="chat img">
+                <div>
+                    <p class="contacts__item-text">Talk to us</p>
+                    <a href="mailto:hello@createx.com">hello@createx.com</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+</header>
+
