--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header class="container header">
     <a href="#">
-        <img src="../img/header_logo.svg" alt="logo image">
+        <img src="../img/header/header_logo.svg" alt="logo image">
     </a>
     <nav class="navbar">
         <ul class="navbar__list">
@@ -25,14 +25,14 @@
         </ul>
         <div class="contacts">
             <div class="contacts__item">
-                <img src="../img/iPhone.svg" alt="iphone image">
+                <img src="../img/header/iPhone.svg" alt="iphone image">
                 <div>
                     <p class="contacts__item-text">Call us</p>
                     <a href="tel:4055550128">(405) 555-0128</a>
                 </div>
             </div>
             <div class="contacts__item">
-                <img src="../img/Chat.svg" alt="chat img">
+                <img src="../img/header/Chat.svg" alt="chat img">
                 <div>
                     <p class="contacts__item-text">Talk to us</p>
                     <a href="mailto:hello@createx.com">hello@createx.com</a>
@@ -44,9 +44,179 @@
 
 
     <main>
-        <section class="container back">
-            
+        <section class="back">
+            <div class="container">
+                <div class="construction">
+                    <div class="construction__title">
+                        <h1>CREATE<span class="orange">X</span> CONSTRUCTION</h1>
+                    </div>
+                    <div class="construction__text">
+                        <p>Cras ultrices leo vitae non viverra. Fringilla nisi 
+                            quisque consequat, dignissim vitae proin ipsum sed. 
+                            Pellentesque nec turpis purus eget pellentesque integer 
+                            ipsum elementum felis. 
+                        </p>
+                    </div>
+                    <div class="construction__buttons">
+                        <button type="button" class="transparent__button">LEARN MORE ABOUT US</button>
+                        <button type="button" class="orange__button">SUBMIT REQUEST</button>
+                    </div>
+                </div>
+    
+                <ul class="slides">
+                    <li class="slides__item active"><span>01</span></li>
+                    <li class="slides__item"><span>02</span></li>
+                    <li class="slides__item"><span>03</span></li>
+                    <li class="slides__item"><span>04</span></li>
+                </ul>
+            </div>
         </section>
+        <section class="construction__bureau">
+            <div class="container">
+                <div class="bureau">
+                    <div class="section__box">
+                        <h2 class="section__title">We are Createx Construction Bureau </h2>
+                        <p class="section__text">We are rightfully considered to be the best 
+                            construction company in the USA.
+                        </p>
+                    </div>
+                    <div class="bureau__video">
+                        <a href="#">
+                            <img src="../img/main/large.svg" alt="play image">
+                        </a>
+                        <div class="bureau__circle">
+                            <img src="../img/main/off.svg" alt="sound off image">
+                        </div>
+                    </div>
+                </div>
+                <div class="values">
+                    <div class="section__box">
+                        <h2 class="section__title">Our core values</h2>
+                        <p class="section__text">Our mission is to set the highest 
+                            standards for construction sphere.
+                        </p>
+                    </div>
+                    <div class="values__cards">
+                        <div class="values__item">
+                            <img src="../img/main/ic-like.svg" alt="like img">
+                            <h4 class="item__title">Quality</h4>
+                            <p class="item__text">Culpa nostrud commodo ea consequat 
+                                aliquip reprehenderit. Veniam velit nostrud aliquip sunt.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="values__item">
+                            <img src="../img/main/ic-hand.svg" alt="like img">
+                            <h4 class="item__title">Safety</h4>
+                            <p class="item__text">Anim reprehenderit sint voluptate 
+                                exercitation adipisicing laborum adipisicing. Minim empor est ea.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="values__item">
+                            <img src="../img/main/ic-slippers.svg" alt="like img">
+                            <h4 class="item__title">Comfort</h4>
+                            <p class="item__text">Sit veniam aute dolore adipisicing nulla sit culpa. 
+                                Minim mollit voluptate ullamco proident ea ad.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="question">
+                    <div class="question__title">
+                        <h3>Want to know more? Ask us a question:</h3>
+                    </div>
+                    <form class="question__input">
+                        <div class="question__item">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="Your name" required>
+                        </div>
+                        <div class="question__item">
+                            <label for="phone">Phone</label>
+                            <input type="tel" id="phone" placeholder="Your phone" required>
+                        </div>
+                        <div class="question__item long">
+                            <label for="message">Message</label>
+                            <input type="text" id="message" placeholder="Your message" required>
+                        </div>
+                        <div class="question__item button">
+                            <label for="send"></label>
+                            <input class="orange__button" type="button" id="send" value="SEND" required>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <section class="services__back">
+            <div class="container">
+                <div class="services">
+                    <div class="section__box">
+                        <h2 class="section__title">Our services</h2>
+                        <p class="section__text">Createx Construction Bureau is a construction 
+                            giant with a full range of construction services.
+                        </p>
+                    </div>
+                    <div class="services__cards">
+                        <div class="services__item">
+                            <img src="../img/main/ic-construction.png" alt="construction img">
+                            <h4 class="item__title">Construction</h4>
+                        </div>
+                        <div class="services__item">
+                            <img src="../img/main/ic-plan.svg" alt="plan img">
+                            <h4 class="item__title">Project Development</h4>
+                        </div>
+                        <div class="services__item active">
+                            <img src="../img/main/ic-pantone.png" alt="pantone img">
+                            <h4 class="item__title">Interior Design</h4>
+                        </div>
+                        <div class="services__item">
+                            <img src="../img/main/ic-painting.svg" alt="painting img">
+                            <h4 class="item__title">Repairs</h4>
+                        </div>
+                    </div>
+                    <div class="services__view">
+                        <h3>Learn more about our services</h3>
+                        <button class="orange__button">VIEW SERVICES</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+<section class="communication__back">
+    <div class="container">
+        <div class="wrapper">
+            <div class="communication">
+                <h2 class="communication__title">A quick way to discuss details</h2>
+                <form>
+                    <div class="form__item">
+                        <label for="communication__name">Name*</label>
+                        <input type="text" id="communication__name" placeholder="Your name" required>
+                    </div>
+                    <div class="form__item">
+                        <label for="communication__phone">Phone*</label>
+                        <input type="tel" id="communication__phone" placeholder="Your phone number" required>
+                    </div>
+                    <div class="form__item">
+                        <label for="communication__email">Email</label>
+                        <input type="email" id="communication__email" placeholder="Your working email">
+                    </div>
+                    <div class="form__item">
+                        <label for="communication__message">Message*</label>
+                        <input type="text" id="communication__message" placeholder="Your message" required>
+                    </div>
+                    <div class="check">
+                        <input type="checkbox" id="communication__checkbox"> I agree to receive communications 
+                        from Createx Construction Bureau.
+                    </div>
+                </form>
+                <button class="communication__button">SEND REQUEST</button>
+            </div>
+        </div>
+    </div>
+</section>        
     </main>
 
 <footer class="footer">
@@ -56,23 +226,23 @@
                 <div class="logo__box">
                     <div class="logo__line">
                         <a href="#">
-                            <img src="../img/footer_logo.svg" alt="footer logo image">
+                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -138,12 +308,12 @@
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/Heart.svg" alt="heart image">
+                    <img src="../img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/up-btn.svg" alt="up button image">
+                    <img src="../img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
