--- a/#source/footer.html
+++ b/#source/footer.html
@@ -5,23 +5,23 @@
                 <div class="logo__box">
                     <div class="logo__line">
                         <a href="#">
-                            <img src="../img/footer_logo.svg" alt="footer logo image">
+                            <img src="../img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
                             <li>
-                                <a href="#"><img src="../img/Whatsapp.svg" alt="Whatsapp logo image"></a>
+                                <a href="#"><img src="../img/footer/Whatsapp.svg" alt="Whatsapp logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/Messanger.svg" alt="Messanger logo image"></a>
+                                <a href="#"><img src="../img/footer/Messanger.svg" alt="Messanger logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/Facebook.svg" alt="Facebook logo image"></a>
+                                <a href="#"><img src="../img/footer/Facebook.svg" alt="Facebook logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/Twitter.svg" alt="Twitter logo image"></a>
+                                <a href="#"><img src="../img/footer/Twitter.svg" alt="Twitter logo image"></a>
                             </li>
                             <li>
-                                <a href="#"><img src="../img/YouTube.svg" alt="YouTube logo image"></a>
+                                <a href="#"><img src="../img/footer/YouTube.svg" alt="YouTube logo image"></a>
                             </li>
                         </ul>
                     </div>
@@ -87,12 +87,12 @@
             <div class="copyright">
                 <div class="copyright__box">
                     <span>© All rights reserved. Made with</span>
-                    <img src="../img/Heart.svg" alt="heart image">
+                    <img src="../img/footer/Heart.svg" alt="heart image">
                     <span>by Createx Studio </span>
                 </div>
                 <a href="#" class="copyright__up">
                     <span>GO TO TOP</span>
-                    <img src="../img/up-btn.svg" alt="up button image">
+                    <img src="../img/footer/up-btn.svg" alt="up button image">
                 </a>
             </div>
         </div>
