first page is ready

--- a/#source/communication.html
+++ b/#source/communication.html
@@ -21,11 +21,12 @@
                         <input type="text" id="communication__message" placeholder="Your message" required>
                     </div>
                     <div class="check">
-                        <input type="checkbox" id="communication__checkbox"> I agree to receive communications 
-                        from Createx Construction Bureau.
+                        <input type="checkbox" id="communication__checkbox"> 
+                        <label for="communication__checkbox"><p>I agree to receive communications 
+                            from Createx Construction Bureau.</p></label>
                     </div>
                 </form>
-                <button class="communication__button">SEND REQUEST</button>
+                <button class="orange__button">SEND REQUEST</button>
             </div>
         </div>
     </div>
