--- a/index.html
+++ b/index.html
@@ -181,9 +181,184 @@
                 </div>
             </div>
         </section>
-
-
-
+        <section class="projects__section">
+            <div class="container">
+                <div class="projects">
+                    <div class="projects__box">
+                        <h2 class="projects__title">Browse our selected projects 
+                            and learn more about our work
+                        </h2>
+                        <div class="arrow__box">
+                            <div class="arrow__left">
+                                <img src="../img/main/Line(Stroke).png" alt="line left">
+                            </div>
+                            <div class="arrow__right active">
+                                <img src="../img/main/Line(right).png" alt="line right">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects__cards">
+                        <div class="projects__item-1">
+                            <div class="item__box">
+                                <h4 class="item__title">Red Finger Building</h4>
+                                <p class="item__text">Business Centers</p>
+                                <button class="orange__button">VIEW PROJECT</button>
+                            </div>
+                        </div>
+                        <div class="projects__item-2 active">
+                            <div class="item__box">
+                                <h4 class="item__title">Cubes Building</h4>
+                                <p class="item__text">Business Centers</p>
+                                <button class="orange__button">VIEW PROJECT</button>
+                            </div>
+                        </div>
+                        <div class="projects__item-3">
+                            <div class="item__box">
+                                <h4 class="item__title">The Pencil Building</h4>
+                                <p class="item__text">Stores & Malls</p>
+                                <button class="orange__button">VIEW PROJECT</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects__view">
+                        <h3 class="view__title">Explore all our works</h3>
+                        <button class="orange__button">VIEW PORTFOLIO</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="supported__section">
+            <div class="container">
+                <div class="supported__box">
+                    <h2 class="supported__title">Supported by 12+ partners</h2>
+                    <ul class="supported__list">
+                        <li><a href="#"><img src="../img/main/client-logo.png" alt="InDepth logo"></a></li>
+                        <li><a href="#"><img src="../img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
+                        <li><a href="#"><img src="../img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
+                        <li><a href="#"><img src="../img/main/client-logo3.png" alt="happy home logo"></a></li>
+                        <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
+                        <li>
+                            <a href="#">
+                                <img src="../img/main/client-logo5.png" alt="Sunset reality logo">
+                                <img src="../img/main/cursor.png" alt="cursor img">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="supported__content">
+                    <div class="supported__block">
+                        <h2 class="supported__title">What our clients are saying</h2>
+                        <img src="../img/main/profile-image.png" alt="profile photo">
+                        <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
+                            Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
+                            laboris cillum laboris voluptate minim proident exercitation ullamco. 
+                        </p>
+                        <div class="supported__switch">
+                            <div class="supported__name">
+                                <h5>Shawn Edwards</h5>
+                                <p>Position, Company name</p>
+                            </div>
+                            <div class="supported__arrows">
+                                <img src="../img/main/prev-btn.png" alt="left arrow">
+                                <img src="../img/main/hover.png" alt="right arrow">
+                            </div>
+                        </div>
+                    </div>
+                    <img class="shift__img" src="../img/main/builders.jpg" alt="builders image">
+                </div>
+            </div>
+        </section>
+        <section class="facts__section">
+            <div class="container">
+                <div class="facts__wrapper">
+                    <div class="facts__box">
+                        <h2 class="facts__title">Some facts and figures</h2>
+                        <ul class="facts__figures">
+                            <li>
+                                <img src="../img/main/circle-progress.png" alt="98% satisfied clients">
+                                <p class="figures__text">Totally satisfied clients</p>
+                            </li>
+                            <li>
+                                <img src="../img/main/circle-progress (1).png" alt="20 years of expperience">
+                                <p class="figures__text">Years of experience</p>
+                            </li>
+                            <li>
+                                <img src="../img/main/circle-progress (2).png" alt="9452 Working hours spent">
+                                <p class="figures__text">Working hours spent</p>
+                            </li>
+                            <li>
+                                <img src="../img/main/circle-progress (3).png" alt="100% succeeded projects">
+                                <p class="figures__text">Succeeded projects</p>
+                            </li>
+                        </ul> 
+                    </div>
+                    <div class="facts__news">
+                        <h2 class="facts__title">Recent news</h2>
+                        <div class="facts__cards">
+                            <div class="facts__item">
+                                <img src="../img/main/facts__card_2.jpg" alt="card image">
+                                <div class="item__box">
+                                    <h5 class="item__title">How to Build Climate Change-Resilient Infrastructure</h5>
+                                    <div class="item__info">
+                                        <p class="item__text">Industry News</p>
+                                        <hr>
+                                        <p class="item__text">June 24, 2020</p>
+                                        <hr>
+                                        <div class="item__social">
+                                            <img src="../img/main/Chat.svg" alt="chat img">
+                                            <p class="item__text">4 comments</p>
+                                        </div>
+                                    </div>
+                                    <p class="item__description">
+                                        Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. 
+                                        Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis 
+                                        convallis enim, nibh convallis...
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="news__divisor">
+                                <div class="facts__item-mini">
+                                    <img src="../img/main/facts__card_1.jpg" alt="card image">
+                                    <div class="item__box">
+                                        <h5 class="item__title orange">How Construction Can Help Itself</h5>
+                                        <div class="item__info">
+                                            <p class="item__text">Innovation</p>
+                                            <hr>
+                                            <p class="item__text">June 12, 2020</p>
+                                            <hr>
+                                            <div class="item__social">
+                                                <img src="../img/main/Chat.svg" alt="chat img">
+                                                <p class="item__text">No comments</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="facts__item-mini">
+                                    <img src="../img/main/facts__card_3.jpg" alt="card image">
+                                    <div class="item__box">
+                                        <h5 class="item__title">Types of Flooring Materials</h5>
+                                        <div class="item__info">
+                                            <p class="item__text">Company News</p>
+                                            <hr>
+                                            <p class="item__text">December 1, 2019</p>
+                                            <hr>
+                                            <div class="item__social">
+                                                <img src="../img/main/Chat.svg" alt="chat img">
+                                                <p class="item__text">No comments</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news__view">
+                            <h3 class="news__title">Explore all our news posts</h3>
+                            <button class="orange__button">VIEW ALL NEWS</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 <section class="communication__back">
     <div class="container">
@@ -208,11 +383,12 @@
                         <input type="text" id="communication__message" placeholder="Your message" required>
                     </div>
                     <div class="check">
-                        <input type="checkbox" id="communication__checkbox"> I agree to receive communications 
-                        from Createx Construction Bureau.
+                        <input type="checkbox" id="communication__checkbox"> 
+                        <label for="communication__checkbox"><p>I agree to receive communications 
+                            from Createx Construction Bureau.</p></label>
                     </div>
                 </form>
-                <button class="communication__button">SEND REQUEST</button>
+                <button class="orange__button">SEND REQUEST</button>
             </div>
         </div>
     </div>
@@ -321,4 +497,3 @@
 </footer>
 </body>
 </html>
-
