several new pages added

--- a/#source/footer.html
+++ b/#source/footer.html
@@ -4,7 +4,7 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="#">
+                        <a href="/index.html">
                             <img src="../img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
