--- a/#source/header.html
+++ b/#source/header.html
@@ -1,11 +1,11 @@
 <header class="container header">
-    <a href="#">
+    <a href="/index.html">
         <img src="../img/header/header_logo.svg" alt="logo image">
     </a>
     <nav class="navbar">
         <ul class="navbar__list">
             <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="/services.html">Services</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contacts</a></li>
