--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Main page</title>
 </head>
 <body>
 
 <header class="container header">
-    <a href="#">
+    <a href="/index.html">
         <img src="../img/header/header_logo.svg" alt="logo image">
     </a>
     <nav class="navbar">
         <ul class="navbar__list">
             <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="/services.html">Services</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contacts</a></li>
@@ -74,9 +74,9 @@
         <section class="construction__bureau">
             <div class="container">
                 <div class="bureau">
-                    <div class="section__box">
-                        <h2 class="section__title">We are Createx Construction Bureau </h2>
-                        <p class="section__text">We are rightfully considered to be the best 
+                    <div class="our__box">
+                        <h2 class="our__title">We are Createx Construction Bureau </h2>
+                        <p class="our__text">We are rightfully considered to be the best 
                             construction company in the USA.
                         </p>
                     </div>
@@ -90,14 +90,14 @@
                     </div>
                 </div>
                 <div class="values">
-                    <div class="section__box">
-                        <h2 class="section__title">Our core values</h2>
-                        <p class="section__text">Our mission is to set the highest 
+                    <div class="bureau__box">
+                        <h2 class="our__title">Our core values</h2>
+                        <p class="our__text">Our mission is to set the highest 
                             standards for construction sphere.
                         </p>
                     </div>
-                    <div class="values__cards">
-                        <div class="values__item">
+                    <div class="our__cards">
+                        <div class="our__item">
                             <img src="../img/main/ic-like.svg" alt="like img">
                             <h4 class="item__title">Quality</h4>
                             <p class="item__text">Culpa nostrud commodo ea consequat 
@@ -105,7 +105,7 @@
                             </p>
                         </div>
                         <hr>
-                        <div class="values__item">
+                        <div class="our__item">
                             <img src="../img/main/ic-hand.svg" alt="like img">
                             <h4 class="item__title">Safety</h4>
                             <p class="item__text">Anim reprehenderit sint voluptate 
@@ -113,7 +113,7 @@
                             </p>
                         </div>
                         <hr>
-                        <div class="values__item">
+                        <div class="our__item">
                             <img src="../img/main/ic-slippers.svg" alt="like img">
                             <h4 class="item__title">Comfort</h4>
                             <p class="item__text">Sit veniam aute dolore adipisicing nulla sit culpa. 
@@ -150,9 +150,9 @@
         <section class="services__back">
             <div class="container">
                 <div class="services">
-                    <div class="section__box">
-                        <h2 class="section__title">Our services</h2>
-                        <p class="section__text">Createx Construction Bureau is a construction 
+                    <div class="services__box">
+                        <h2 class="our__title">Our services</h2>
+                        <p class="our__text">Createx Construction Bureau is a construction 
                             giant with a full range of construction services.
                         </p>
                     </div>
@@ -230,21 +230,15 @@
         <section class="supported__section">
             <div class="container">
                 <div class="supported__box">
-                    <h2 class="supported__title">Supported by 12+ partners</h2>
-                    <ul class="supported__list">
-                        <li><a href="#"><img src="../img/main/client-logo.png" alt="InDepth logo"></a></li>
-                        <li><a href="#"><img src="../img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
-                        <li><a href="#"><img src="../img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
-                        <li><a href="#"><img src="../img/main/client-logo3.png" alt="happy home logo"></a></li>
-                        <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
-                        <li>
-                            <a href="#">
-                                <img src="../img/main/client-logo5.png" alt="Sunset reality logo">
-                                <img src="../img/main/cursor.png" alt="cursor img">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+<h2 class="supported__title">Supported by 12+ partners</h2>
+<ul class="supported__list">
+    <li><a href="#"><img src="../img/main/client-logo.png" alt="InDepth logo"></a></li>
+    <li><a href="#"><img src="../img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
+    <li><a href="#"><img src="../img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
+    <li><a href="#"><img src="../img/main/client-logo3.png" alt="happy home logo"></a></li>
+    <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
+    <li><a href="#"><img src="../img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
+</ul>                </div>
                 <div class="supported__content">
                     <div class="supported__block">
                         <h2 class="supported__title">What our clients are saying</h2>
@@ -401,7 +395,7 @@
             <div class="footer__box">
                 <div class="logo__box">
                     <div class="logo__line">
-                        <a href="#">
+                        <a href="/index.html">
                             <img src="../img/footer/footer_logo.svg" alt="footer logo image">
                         </a>
                         <ul class="social__list">
