--- a/#source/footer.html
+++ b/#source/footer.html
@@ -70,7 +70,7 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
                         <li><a href="#"><span class="opacity__text">Available Positions</span></a></li>
                         <li><a href="#"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
@@ -78,8 +78,8 @@
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
                         <li><a href="#"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
