--- a/#source/header.html
+++ b/#source/header.html
@@ -4,9 +4,9 @@
     </a>
     <nav class="navbar">
         <ul class="navbar__list">
-            <li><a href="#">About us</a></li>
+            <li><a href="/about.html">About us</a></li>
             <li><a href="/services.html">Services</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="/work.html">Work</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contacts</a></li>
         </ul>
