--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </a>
     <nav class="navbar">
         <ul class="navbar__list">
-            <li><a href="#">About us</a></li>
+            <li><a href="/about.html">About us</a></li>
             <li><a href="/services.html">Services</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="/work.html">Work</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contacts</a></li>
         </ul>
@@ -74,7 +74,7 @@
         <section class="construction__bureau">
             <div class="container">
                 <div class="bureau">
-                    <div class="our__box">
+                    <div class="bureau__box">
                         <h2 class="our__title">We are Createx Construction Bureau </h2>
                         <p class="our__text">We are rightfully considered to be the best 
                             construction company in the USA.
@@ -99,24 +99,24 @@
                     <div class="our__cards">
                         <div class="our__item">
                             <img src="../img/main/ic-like.svg" alt="like img">
-                            <h4 class="item__title">Quality</h4>
-                            <p class="item__text">Culpa nostrud commodo ea consequat 
+                            <h4 class="our__subtitle">Quality</h4>
+                            <p class="our__subtext">Culpa nostrud commodo ea consequat 
                                 aliquip reprehenderit. Veniam velit nostrud aliquip sunt.
                             </p>
                         </div>
                         <hr>
                         <div class="our__item">
                             <img src="../img/main/ic-hand.svg" alt="like img">
-                            <h4 class="item__title">Safety</h4>
-                            <p class="item__text">Anim reprehenderit sint voluptate 
+                            <h4 class="our__subtitle">Safety</h4>
+                            <p class="our__subtext">Anim reprehenderit sint voluptate 
                                 exercitation adipisicing laborum adipisicing. Minim empor est ea.
                             </p>
                         </div>
                         <hr>
                         <div class="our__item">
                             <img src="../img/main/ic-slippers.svg" alt="like img">
-                            <h4 class="item__title">Comfort</h4>
-                            <p class="item__text">Sit veniam aute dolore adipisicing nulla sit culpa. 
+                            <h4 class="our__subtitle">Comfort</h4>
+                            <p class="our__subtext">Sit veniam aute dolore adipisicing nulla sit culpa. 
                                 Minim mollit voluptate ullamco proident ea ad.
                             </p>
                         </div>
@@ -239,28 +239,27 @@
     <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
     <li><a href="#"><img src="../img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
 </ul>                </div>
-                <div class="supported__content">
-                    <div class="supported__block">
-                        <h2 class="supported__title">What our clients are saying</h2>
-                        <img src="../img/main/profile-image.png" alt="profile photo">
-                        <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
-                            Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
-                            laboris cillum laboris voluptate minim proident exercitation ullamco. 
-                        </p>
-                        <div class="supported__switch">
-                            <div class="supported__name">
-                                <h5>Shawn Edwards</h5>
-                                <p>Position, Company name</p>
-                            </div>
-                            <div class="supported__arrows">
-                                <img src="../img/main/prev-btn.png" alt="left arrow">
-                                <img src="../img/main/hover.png" alt="right arrow">
-                            </div>
-                        </div>
-                    </div>
-                    <img class="shift__img" src="../img/main/builders.jpg" alt="builders image">
-                </div>
+<div class="supported__content">
+    <div class="supported__block">
+        <h2 class="supported__title">What our clients are saying</h2>
+        <img src="../img/main/profile-image.png" alt="profile photo">
+        <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
+            Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
+            laboris cillum laboris voluptate minim proident exercitation ullamco. 
+        </p>
+        <div class="supported__switch">
+            <div class="supported__name">
+                <h5>Shawn Edwards</h5>
+                <p>Position, Company name</p>
             </div>
+            <div class="supported__arrows">
+                <img src="../img/main/prev-btn.png" alt="left arrow">
+                <img src="../img/main/hover.png" alt="right arrow">
+            </div>
+        </div>
+    </div>
+    <img class="shift__img" src="../img/main/builders.jpg" alt="builders image">
+</div>            </div>
         </section>
         <section class="facts__section">
             <div class="container">
@@ -461,7 +460,7 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
                         <li><a href="#"><span class="opacity__text">Available Positions</span></a></li>
                         <li><a href="#"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
@@ -469,8 +468,8 @@
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
                         <li><a href="#"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
