--- a/services.html
+++ b/services.html
@@ -21,9 +21,9 @@
     </a>
     <nav class="navbar">
         <ul class="navbar__list">
-            <li><a href="#">About us</a></li>
+            <li><a href="/about.html">About us</a></li>
             <li><a href="/services.html">Services</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="/work.html">Work</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contacts</a></li>
         </ul>
@@ -223,7 +223,7 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
                         <li><a href="#"><span class="opacity__text">Available Positions</span></a></li>
                         <li><a href="#"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
@@ -231,8 +231,8 @@
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
                         <li><a href="#"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
