--- a/interior__design.html
+++ b/interior__design.html
@@ -15,35 +15,39 @@
 
         <section class="description__section">
             
-<header class="container header">
-    <a href="/index.html">
-        <img src="../img/header/header_logo.svg" alt="logo image">
-    </a>
-    <nav class="navbar">
-        <ul class="navbar__list">
-            <li><a href="#">About us</a></li>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contacts</a></li>
-        </ul>
-        <div class="contacts">
-            <div class="contacts__item">
-                <img src="../img/header/iPhone.svg" alt="iphone image">
-                <div>
-                    <p class="contacts__item-text">Call us</p>
-                    <a href="tel:4055550128">(405) 555-0128</a>
+<header class="header">
+    <div class="container">
+        <div class="header__box">
+            <a href="/index.html">
+                <img src="../img/header/header_logo.svg" alt="logo image">
+            </a>
+            <nav class="navbar">
+                <ul class="navbar__list">
+                    <li><a href="/about.html">About us</a></li>
+                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="/work.html">Work</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+                <div class="contacts">
+                    <div class="contacts__item">
+                        <img src="../img/header/iPhone.svg" alt="iphone image">
+                        <div>
+                            <p class="contacts__item-text">Call us</p>
+                            <a href="tel:4055550128">(405) 555-0128</a>
+                        </div>
+                    </div>
+                    <div class="contacts__item">
+                        <img src="../img/header/Chat.svg" alt="chat img">
+                        <div>
+                            <p class="contacts__item-text">Talk to us</p>
+                            <a href="mailto:hello@createx.com">hello@createx.com</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="contacts__item">
-                <img src="../img/header/Chat.svg" alt="chat img">
-                <div>
-                    <p class="contacts__item-text">Talk to us</p>
-                    <a href="mailto:hello@createx.com">hello@createx.com</a>
-                </div>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </div>
 </header>
 
 
@@ -407,7 +411,7 @@
                 <div class="info__box">
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">About Us</span></a></li>
+                        <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
                         <li><a href="#"><span class="opacity__text">Available Positions</span></a></li>
                         <li><a href="#"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
@@ -415,8 +419,8 @@
                 <div class="info__box">
                     <h5 class="info__title">OUR EXPERIENCE</h5>
                     <ul class="info__list">
-                        <li><a href="#"><span class="opacity__text">Services</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Work</span></a></li>
+                        <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
+                        <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
                         <li><a href="#"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
