--- a/#source/header.html
+++ b/#source/header.html
@@ -1,31 +1,35 @@
-<header class="container header">
-    <a href="/index.html">
-        <img src="../img/header/header_logo.svg" alt="logo image">
-    </a>
-    <nav class="navbar">
-        <ul class="navbar__list">
-            <li><a href="/about.html">About us</a></li>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="/work.html">Work</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contacts</a></li>
-        </ul>
-        <div class="contacts">
-            <div class="contacts__item">
-                <img src="../img/header/iPhone.svg" alt="iphone image">
-                <div>
-                    <p class="contacts__item-text">Call us</p>
-                    <a href="tel:4055550128">(405) 555-0128</a>
+<header class="header">
+    <div class="container">
+        <div class="header__box">
+            <a href="/index.html">
+                <img src="../img/header/header_logo.svg" alt="logo image">
+            </a>
+            <nav class="navbar">
+                <ul class="navbar__list">
+                    <li><a href="/about.html">About us</a></li>
+                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="/work.html">Work</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+                <div class="contacts">
+                    <div class="contacts__item">
+                        <img src="../img/header/iPhone.svg" alt="iphone image">
+                        <div>
+                            <p class="contacts__item-text">Call us</p>
+                            <a href="tel:4055550128">(405) 555-0128</a>
+                        </div>
+                    </div>
+                    <div class="contacts__item">
+                        <img src="../img/header/Chat.svg" alt="chat img">
+                        <div>
+                            <p class="contacts__item-text">Talk to us</p>
+                            <a href="mailto:hello@createx.com">hello@createx.com</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="contacts__item">
-                <img src="../img/header/Chat.svg" alt="chat img">
-                <div>
-                    <p class="contacts__item-text">Talk to us</p>
-                    <a href="mailto:hello@createx.com">hello@createx.com</a>
-                </div>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </div>
 </header>
 
